--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,10 +55,10 @@
         app:layout_constraintTop_toBottomOf="@+id/passIntent" />
 
     <Button
-        android:id="@+id/linearLayoutExample"
+        android:id="@+id/relativeLayoutExample"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Linear layout Example"
+        android:text="Relative layout Example"
         android:layout_margin="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
